--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         <div class="container">
             <div class="navbar-brand js-scroll-trigger" href="index.html">
                 <div style="width: 150px">
+                   <a href="index.html">
                     <img src="img/logo_290x60.png" class="nav-logo">
+                    </a>
                 </div>
             </div>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="float: right">
@@ -163,7 +165,7 @@
     </div>
 
     <!--    影片-->
-    <section id="about" class="projects-section bg-light">
+    <section id="about" class="projects-section bg-light btn-mobile">
         <div class="" style="width: 70%; margin: 0px auto">
 
             <!-- Featured Project Row -->
