--- a/indexOGE.html
+++ b/indexOGE.html
@@ -47,12 +47,16 @@
 <body id="page-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+ <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="index.html">
-                <img src="img/logo_290x60.png" width="60%" height="60%">
-            </a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="navbar-brand js-scroll-trigger" href="index.html">
+                <div style="width: 150px">
+                   <a href="index.html">
+                    <img src="img/logo_290x60.png" class="nav-logo">
+                    </a>
+                </div>
+            </div>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="float: right">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse nav-font" id="navbarResponsive">
@@ -91,7 +95,6 @@
             </div>
         </div>
     </nav>
-
     <header class="ogelanding text-center text-white d-flex">
         <div class="container my-auto">
             <div class="row" style="margin-top:6%">
@@ -108,17 +111,17 @@
                         <!--                       Global Entrepreneur is an internship experience where young people can explore<br><br>learn and contribute to the entrepreneurial world.-->
                         </p>
                         <br><br><br>
-                        <a align=left class="btn btn-primary btn-xl js-scroll-trigger" href="#video">了解更多</a>
+                        <a align=left class="btn btn-primary btn-xl js-scroll-trigger btn-mobile" href="#video">了解更多</a>
                 </div>
             </div>
             <br>
-            <div class="container value wow bounce" data-wow-iteration="3">
+            <div class="container value wow bounce btn-mobile" data-wow-iteration="3">
                 <a class="fas fa-angle-down fa-3x js-scroll-trigger value" href="#video" style="color:rgb(255,255,255,0.7)"></a>
             </div>
         </div>
 
     </header>
-    <section id="video" class="section-video">
+    <section id="video" class="section-video btn-mobile">
         <div class="container">
             <div class="row align-items-center no-gutters ">
                 <div class="col-xl-5">
