--- a/indexOGV.html
+++ b/indexOGV.html
@@ -54,13 +54,16 @@
 
 <body id="page-top">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="index.html">
-                <img src="img/logo_290x60.png" width="60%" height="60%">
-            </a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="navbar-brand js-scroll-trigger" href="index.html">
+                <div style="width: 150px">
+                   <a href="index.html">
+                    <img src="img/logo_290x60.png" class="nav-logo">
+                    </a>
+                </div>
+            </div>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="float: right">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse nav-font" id="navbarResponsive">
@@ -118,17 +121,17 @@
                         <!--                        即便再微小的行動，都能在他人的心中種下改變的種子<br><br>而我們都能成為影響力的散播者-->
                     </p>
 
-                    <a align=left class="btn btn-xl btn-header js-scroll-trigger" href="#video">瀏覽精選志工專案</a>
+                    <a class="btn btn-xl js-scroll-trigger btn-header btn-mobile" href="#video">瀏覽精選志工專案</a>
                 </div>
             </div>
 
-            <div class="container value wow bounce" data-wow-iteration="3" data-wow-delay="0.5s">
+            <div class="container value wow bounce btn-mobile" data-wow-iteration="3" data-wow-delay="0.5s">
                 <a class="fas fa-angle-down fa-3x js-scroll-trigger value" href="#video" style="color:rgb(255,255,255,0.7)"></a>
             </div>
         </div>
 
     </header>
-    <section id="video" class="section-video section-whbacolor">
+    <section id="video" class="section-video section-whbacolor btn-mobile">
 
         <div class="container">
             <div class="row align-items-center no-gutters">
