--- a/indexFAQ.html
+++ b/indexFAQ.html
@@ -17,9 +17,9 @@
 <body class="section-grbacolor">
    
     <div class="col-lg-6 flaot_lf">
-        <div class="accordion">
+        <div class="accordion fontsize">
             <div class="accordion-item accordion-text">
-                <a>我需要付多少行政費才能參加海外成長專案?</a>
+                <a class="fontsize">我需要付多少行政費才能參加海外成長專案?</a>
                 <div class="content">
                     <li>這要依照您選擇的國家所更動。</li>
                 </div>
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="col-lg-6 float_rt">
-        <div class="accordion">
+        <div class="accordion fontsize">
             <div class="accordion-item accordion-text">
                 <a>在出發參與專案前，需要準備那些文件?</a>
                 <div class="content">
