--- a/indexOGE.html
+++ b/indexOGE.html
@@ -146,29 +146,29 @@
 
     <div class="count-font section-count">
         <div class="stat-wrap wow fadeIn" style="margin-bottom: 0px; background-color: #30c39e">
-            <div></div>
+               <div></div>
             <div align=center>
                 <div class="inline-flag">
-                    <span class="stat-number mainNav">100</span>
-                    <font size="6px">+</font>
+                   <span class="stat-number mainNav">100</span>
+                        <l class="stat-plus"> </l>
                 </div>
-                <a>2017年達成的海外實習</a>
+                <a class="stat-title">海外實習</a>
             </div>
             <div align=center>
                 <div class="inline-flag">
-                    <span class="stat-number">300</span>
-                    <font size="6px">+</font>
+                    <span class="stat-number mainNav">300</span>
+                        <l class="stat-plus"> +</l>
                 </div>
-                <a>全球合作公司數</a>
+                <a class="stat-title">合作公司</a>
             </div>
             <div align=center>
 
                 <div class="inline-flag">
-                    <span class="stat-number">9000</span>
-                    <font size="6px">+</font>
+                   <span class="stat-number mainNav">9000</span>
+                        <l class="stat-plus"> +</l>
                 </div>
-                <a>提供海外成長專以來</a><br>
-                <a>所有達成的人數</a>
+                <a class="stat-title">
+                所有達成的人數</a>
             </div>
             <div>
             </div>
@@ -299,7 +299,7 @@
             <p class="section-heading wow fadeInDown section-title" data-wow-delay="0.3s">如何參與專案</p>
 
         </div>
-        <img src="img/process2.png" width="60%" height="60%" style="margin-top: 4rem">
+        <img src="img/process2.png" class="howto">
     </div>
     <br><br><br><br><br>
 
@@ -330,7 +330,7 @@
 
         <div class="footer-left">
 
-            <img src="img/aiesec%20logo.png" height="30%" width="30%">
+            <img src="img/aiesec%20logo.png" class="footer-logo">
 
             <p class="footer-links microfont">
                 <a href="index.html">首頁</a>
