--- a/indexOGT.html
+++ b/indexOGT.html
@@ -334,7 +334,7 @@
 
         <div class="footer-left">
 
-            <img src="img/aiesec%20logo.png" height="30%" width="30%">
+            <img src="img/aiesec%20logo.png" class="footer-logo">
 
             <p class="footer-links microfont">
                 <a href="index.html">首頁</a>
