--- a/indexOGV.html
+++ b/indexOGV.html
@@ -314,7 +314,7 @@
 
         </div>
         <div class="wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.7s">
-            <img src="img/process2.png" width="60%" height="60%" style="margin-top: 4rem">
+            <img src="img/process2.png" class="howto">
 
         </div>
     </div>
@@ -338,7 +338,7 @@
                 <div class="col-lg-12 text-center">
                     <p class="section-heading wow fadeInDown section-title">報名開始您的旅程</p>
                 </div>
-                <iframe src="twogv.html" width="100%" height="727px" frameborder="0" scrolling="yes"></iframe>
+                <iframe src="twogv.html" width="100%" height="100%" frameborder="0" scrolling="yes"></iframe>
             </div>
 
         </div>
@@ -349,7 +349,7 @@
 
         <div class="footer-left">
 
-            <img src="img/aiesec%20logo.png" height="30%" width="30%">
+            <img src="img/aiesec%20logo.png"  class="footer-logo">
 
             <p class="footer-links microfont">
                 <a href="index.html">首頁</a>
