--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 
                     <div class="collapse" id="colaboration1">
                         <div class="collaspe-body">
-                            <a href="indexOGV.html" class="collapse-font"> Global Volunteer 海外成長</a><br>
-                            <a href="indexOGT.html" class="collapse-font"> Global Talent 海外實習</a><br>
-                            <a href="indexOGE.html" class="collapse-font"> Global Entrepreneur 海外青創</a>
+                            <a href="OutGoing%20Volunnter.html"S class="collapse-font"> Global Volunteer 海外成長</a><br>
+                            <a href="Outgoing%20Talent.html" class="collapse-font"> Global Talent 海外實習</a><br>
+                            <a href="Outgoing%20Entrepreneur.html" class="collapse-font"> Global Entrepreneur 海外青創</a>
 
                         </div>
                     </div>
@@ -205,7 +205,7 @@
                         <a href="indexOGV.html"><img class="card-img-top" src="img/webp/students-gv.webp" alt=""></a>
                         <div class="card-body">
                             <h4 class="card-title">
-                                <a href="indexOGV.html"><img src="img/Global_Volunteer.png" width="50%" height="50%"></a>
+                                <a href="OutGoing%20Volunnter.html"><img src="img/Global_Volunteer.png" width="50%" height="50%"></a>
                             </h4>
                             <h5 class="card-text1" align=center><br>和來自各地的志工一起發揮影響力，完成與聯合國發展目標結合的專案</h5>
                             <br>
@@ -225,7 +225,7 @@
                         <a href="#"><img class="card-img-top" src="img/webp/students-gt.webp" alt=""></a>
                         <div class="card-body">
                             <h4 class="card-title">
-                                <a href="indexOGT.html"><img src="img/Global_talent.png" width="50%" height="50%"></a>
+                                <a href="Outgoing%20Talent.html"><img src="img/Global_talent.png" width="50%" height="50%"></a>
                             </h4>
                             <h5 class="card-text1" align=center><br>進入國際企業實習，提升職場專業能力，成為全球人力市場的搶手人才</h5>
                             <br>
@@ -242,7 +242,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6  wow zoomIn">
                     <div class="card h-100 card-margin mt-5">
-                        <a href="indexOGE.html"><img class="card-img-top" src="img/webp/students-ge.webp" alt=""></a>
+                        <a href="Outgoing%20Entrepreneur.html"><img class="card-img-top" src="img/webp/students-ge.webp" alt=""></a>
                         <div class="card-body">
                             <h4 class="card-title">
                                 <a href="#"><img src="img/Global_Entrepreneur.png" width="50%" height="50%"></a>
@@ -440,11 +440,11 @@
                 ·
                 <a href="#">專案說明</a>
                 ·
-                <a href="indexOGV.html">海外成長</a>
+                <a href="OutGoing%20Volunnter.html">海外成長</a>
                 ·
-                <a href="indexOGT.html">海外實習</a>
+                <a href="Outgoing%20Talent.html">海外實習</a>
                 ·
-                <a href="indexOGE.html">海外青創</a>
+                <a href="Outgoing%20Entrepreneur.html">海外青創</a>
             </p>
 
             <p class="footer-company-name">AIESEC in Taiwan&copy; 2018</p>
