--- a/Outgoing Entrepreneur.html
+++ b/Outgoing Entrepreneur.html
@@ -69,9 +69,9 @@
 
                     <div class="collapse" id="colaboration1">
                         <div class="collaspe-body">
-                            <a href="indexOGV.html" class="collapse-font"> Global Volunteer 海外成長</a><br>
-                            <a href="indexOGT.html" class="collapse-font"> Global Talent 海外實習</a><br>
-                            <a href="indexOGE.html" class="collapse-font"> Global Entrepreneur 海外青創</a>
+                            <a href="OutGoing%20Volunnter.html" class="collapse-font"> Global Volunteer 海外成長</a><br>
+                            <a href="Outgoing%20Talent.html" class="collapse-font"> Global Talent 海外實習</a><br>
+                            <a href="Outgoing%20Entrepreneur.html" class="collapse-font"> Global Entrepreneur 海外青創</a>
 
                         </div>
                     </div>
@@ -339,11 +339,11 @@
                 ·
                 <a href="#">專案說明</a>
                 ·
-                <a href="indexOGV.html">海外成長</a>
+                <a href="OutGoing%20Volunnter.html">海外成長</a>
                 ·
-                <a href="indexOGT.html">海外實習</a>
+                <a href="Outgoing%20Talent.html">海外實習</a>
                 ·
-                <a href="#">海外青創</a>
+                <a href="Outgoing%20Entrepreneur.html">海外青創</a>
             </p>
 
             <p class="footer-company-name">AIESEC in Taiwan&copy; 2018</p>
