0902 recruitment form iframe

--- a/Outgoing Talent.html
+++ b/Outgoing Talent.html
@@ -322,7 +322,7 @@
                 <div class="col-lg-12 text-center">
                     <p class="section-heading wow fadeInDown section-title">報名開始您的旅程</p>
                 </div>
-                <iframe src="twogv.html" width="100%" height="735px" frameborder="0" scrolling="yes"></iframe>
+                <iframe src="ogt_info_session_form.html" width="100%" height="600px" frameborder="0" scrolling="yes"></iframe>
             </div>
         </div>
 
