--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
                 <div class="col-lg-4 col-sm-6 portfolio-item wow zoomIn">
                     <div class="card h-100 card-margin mt-5">
-                        <a href="indexOGV.html"><img class="card-img-top" src="img/webp/students-gv.webp" alt=""></a>
+                        <a href="OutGoing%20Volunnter.html"><img class="card-img-top" src="img/students-gv.jpg" alt=""></a>
                         <div class="card-body">
                             <h4 class="card-title">
                                 <a href="indexOGV.html"><img src="img/Global_Volunteer.png" width="50%" height="50%"></a>
@@ -222,7 +222,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 portfolio-item wow zoomIn">
                     <div class="card h-100 card-margin mt-5">
-                        <a href="#"><img class="card-img-top" src="img/webp/students-gt.webp" alt=""></a>
+                        <a href="Outgoing%20Talent.html"><img class="card-img-top" src="img/students-gt.jpg" alt=""></a>
                         <div class="card-body">
                             <h4 class="card-title">
                                 <a href="Outgoing%20Talent.html"><img src="img/Global_talent.png" width="50%" height="50%"></a>
@@ -242,10 +242,10 @@
                 </div>
                 <div class="col-lg-4 col-sm-6  wow zoomIn">
                     <div class="card h-100 card-margin mt-5">
-                        <a href="Outgoing%20Entrepreneur.html"><img class="card-img-top" src="img/webp/students-ge.webp" alt=""></a>
+                        <a href="Outgoing%20Entrepreneur.html"><img class="card-img-top" src="img/students-ge.jpg" alt=""></a>
                         <div class="card-body">
                             <h4 class="card-title">
-                                <a href="#"><img src="img/Global_Entrepreneur.png" width="50%" height="50%"></a>
+                                <a href="Outgoing%20Entrepreneur.html"><img src="img/Global_Entrepreneur.png" width="50%" height="50%"></a>
                             </h4>
                             <h5 class="card-text1" align=center><br>加入快速成長的新創團隊，短時間培養職場即戰力</h5>
                             <br>
@@ -280,7 +280,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img/webp/un.webp" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
+                        <img src="img/un.png" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
                     </div>
                     <div class="service-box mt-5 mx-auto">
                         <h3 class="mb-3">與聯合國簽署獨家合作</h3>
@@ -290,7 +290,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img/webp/leadership.webp" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
+                        <img src="img/leadership.png" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
                     </div>
                     <div class="service-box mt-5 mx-auto">
 
@@ -301,7 +301,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img/webp/network.webp" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
+                        <img src="img/network.png" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
                     </div>
                     <div class="service-box mt-5 mx-auto">
                         <h3 class="mb-3">建立國際人脈連結</h3>
