--- a/oge_info_session_form.html
+++ b/oge_info_session_form.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="row">
+    <div class="row mt-5">
         <div class="container">
             <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST" name="gip_form">
                 <table class="table table-borderless fixed">
