0903 index margin top

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <br>
             <div class="row">
 
-                <div class="col-lg-4 col-sm-6 portfolio-item wow zoomIn">
+                <div class="col-lg-4 col-sm-6 portfolio-item wow zoomIn mt-5">
                     <div class="card h-100 card-margin mt-5">
                         <a href="OutGoing%20Volunnter.html"><img class="card-img-top" src="img/students-gv.jpg" alt=""></a>
                         <div class="card-body">
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6 portfolio-item wow zoomIn">
+                <div class="col-lg-4 col-sm-6 portfolio-item wow zoomIn  mt-5">
                     <div class="card h-100 card-margin mt-5">
                         <a href="Outgoing%20Talent.html"><img class="card-img-top" src="img/students-gt.jpg" alt=""></a>
                         <div class="card-body">
@@ -242,7 +242,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6  wow zoomIn">
+                <div class="col-lg-4 col-sm-6  wow zoomIn mt-5">
                     <div class="card h-100 card-margin mt-5">
                         <a href="Outgoing%20Entrepreneur.html"><img class="card-img-top" src="img/students-ge.jpg" alt=""></a>
                         <div class="card-body">
