--- a/Outgoing Talent.html
+++ b/Outgoing Talent.html
@@ -359,7 +359,7 @@
 
             <div>
                 <i class="fa fa-map-marker microfont"></i>
-                <p>新北市板橋區莒光路52號之一</p>
+                <p>新北市板橋區莒光路52號2樓之一</p>
             </div>
 
             <div>
