--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="container my-auto">
             <div class="row" style="margin-top: 6%">
                 <div class="col-lg-12">
-                    <h1 align=center class="text-uppercase animated zoomIn header-font font-size" style="animation-duration: 1s;animation-delay: 1s">
+                    <h1 align=center class="text-uppercase animated zoomIn header-font" style="animation-duration: 1s;animation-delay: 1s">
                         <br><br>
                         <strong id="title_head">
                             <!--                            青年創造影響力的起點 -->
@@ -456,7 +456,7 @@
 
             <div>
                 <i class="fa fa-map-marker nav-font"></i>
-                <p>新北市板橋區莒光路52號之一</p>
+                <p>新北市板橋區莒光路52號2樓之一</p>
             </div>
 
             <div>
@@ -522,10 +522,10 @@
             }
             console.log('Retrieved', record);
             $('#title_head').append(
-                `<a>${record.fields.data_title}</a>`
+                `<a class="header-font">${record.fields.data_title}</a>`
             );
             $('#info_head').append(
-                `<a>${record.fields.data_info}</a>`
+                `<a class="info-font">${record.fields.data_info}</a>`
             );
         });
 
