--- a/joinUs.html
+++ b/joinUs.html
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                     <li class="nav-item dropdown">
-                        <a class="nav-link js-scroll-trigger" href="https://aiesec.org/search" target="_blank" sytle="color=white">加入我們·秋季徵才</a>
+                        <a class="nav-link js-scroll-trigger" href="joinUs.html" target="_blank" sytle="color=white">加入我們·秋季徵才</a>
                     </li>
 
                     <li class="nav-item dropdown">
