--- a/Outgoing Entrepreneur.html
+++ b/Outgoing Entrepreneur.html
@@ -90,6 +90,9 @@
                             <a href="#" class="collapse-font">企業合作</a>
                         </div>
                     </div>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link js-scroll-trigger" href="joinUs.html" target="_blank" sytle="color=white">加入我們·秋季徵才</a>
+                    </li>
 
                     <li class="nav-item dropdown">
                         <a class="nav-link js-scroll-trigger" href="https://aiesec.org/search" target="_blank">尋找適合專案</a>
@@ -114,7 +117,7 @@
                         <!--                       Global Entrepreneur is an internship experience where young people can explore<br><br>learn and contribute to the entrepreneurial world.-->
                     </p>
                     <br><br><br>
-                    <a align=left class="btn btn-primary btn-xl js-scroll-trigger btn-mobile" href="#video">了解更多</a>
+<!--                    <a align=left class="btn btn-primary btn-xl js-scroll-trigger btn-mobile" href="#video">了解更多</a>-->
                 </div>
             </div>
             <br>
