--- a/Outgoing Talent.html
+++ b/Outgoing Talent.html
@@ -88,6 +88,9 @@
                             <a href="#" class="collapse-font">企業合作</a>
                         </div>
                     </div>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link js-scroll-trigger" href="joinUs.html" target="_blank" sytle="color=white">加入我們·秋季徵才</a>
+                    </li>
 
                     <li class="nav-item dropdown">
                         <a class="nav-link js-scroll-trigger" href="https://aiesec.org/search" target="_blank">尋找適合專案</a>
@@ -114,7 +117,7 @@
                         <!--                       Global Talent is an internship experience for young people<br>aiming towards professional career development in a global setting.-->
                     </p>
 
-                    <a align=left class="btn btn-primary btn-xl js-scroll-trigger btn-mobile" href="#video">了解更多</a>
+<!--                    <a align=left class="btn btn-primary btn-xl js-scroll-trigger btn-mobile" href="#video">了解更多</a>-->
 
 
                 </div>
