--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
                             <a href="#" class="collapse-font">企業合作</a>
                         </div>
                     </div>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link js-scroll-trigger" href="joinUs.html" target="_blank" sytle="color=white">加入我們·秋季徵才</a>
+                    </li>
 
                     <li class="nav-item dropdown">
                         <a class="nav-link js-scroll-trigger" href="https://aiesec.org/search" target="_blank">尋找適合專案</a>
