--- a/Outgoing Talent.html
+++ b/Outgoing Talent.html
@@ -84,7 +84,7 @@
 
                     <div class="collapse" id="colaboration">
                         <div class="collaspe-body">
-                            <a href="#" class="collapse-font">NGO 合作</a><br>
+                            <a href="Incoming%20Volunteer.html" class="collapse-font">NGO 合作</a><br>
                             <a href="#" class="collapse-font">企業合作</a>
                         </div>
                     </div>
