--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                 <ul class="navbar-nav ml-auto">
 
                     <li class="collapse-trigger">
-                        <a class="collapse-trigger" data-toggle="collapse" href="#colaboration1" role="button" aria-expanded="false" aria-controls="colaboration">
-                            青年參與計畫 <i class="fa fa-caret-down"></i>&nbsp;&nbsp;&nbsp;</a>
+                        <a class="collapse-trigger" data-toggle="collapse" href="#colaboration1" role="button" aria-expanded="false" aria-controls="colaboration">青年參與計畫 <i class="fa fa-caret-down"></i>&nbsp;&nbsp;&nbsp;</a>
                     </li>
 
                     <div class="collapse" id="colaboration1">
@@ -78,13 +77,12 @@
                     </div>
 
                     <li class="collapse-trigger">
-                        <a class="collapse-trigger" data-toggle="collapse" href="#colaboration" role="button" aria-expanded="false" aria-controls="colaboration">
-                            組織合作機會 <i class="fa fa-caret-down"></i></a>
+                        <a class="collapse-trigger" data-toggle="collapse" href="#colaboration" role="button" aria-expanded="false" aria-controls="colaboration">組織合作機會 <i class="fa fa-caret-down"></i></a>
                     </li>
 
                     <div class="collapse" id="colaboration">
                         <div class="collaspe-body">
-                            <a href="#" class="collapse-font">NGO 合作</a><br>
+                            <a href="Incoming%20Volunteer.html" class="collapse-font">NGO 合作</a><br>
                             <a href="#" class="collapse-font">企業合作</a>
                         </div>
                     </div>
@@ -110,7 +108,7 @@
                 </div>
                 <div class="col-lg-12 animated fadeInDown" style="animation-duration: 1s; animation-delay: 1.5s;animation-delay: 1.5s">
                     <p align="center" class="font-size" id="info_head">
-                        <!--                        我們相信一個人微小的行動能夠影響一件事情，<br>而一群人就能夠改變台灣、改變世界。-->
+                        <!--  我們相信一個人微小的行動能夠影響一件事情，<br>而一群人就能夠改變台灣、改變世界。-->
                         <br><br>
                     </p>
                 </div>
