--- a/joinUs.html
+++ b/joinUs.html
@@ -141,7 +141,7 @@
         </div>
         <br>
         <div class="wow fadeInDown" data-wow-duration="1.2s" data-wow-offset="50">
-            <p style="text-align: center" class="container sdg-font">AIESEC 認為青年應該具備自我覺察、世界公民意識、解決問題能力與激勵他人能力，對世界散發正面影響力。<br>AIESEC 2019 校園徵才，期待你的加入！
+            <p style="text-align: center" class="container sdg-font">AIESEC 提供多元機會，讓青年培養「自我覺察」、「世界公民意識」、「解決問題能力」與「激勵他人」四項領導力特質<br>如果你認同青年是未來社會要角、能對社會產生正面影響力，2019 校園徵才，等你加入我們！
             </p>
         </div>
         <div class="container" style="padding-top: 2rem;padding-bottom: 8rem">
@@ -153,7 +153,7 @@
                     <div class="service-box mt-5 mx-auto">
                         <h2 class="mb-3">實戰力Get</h2>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">提升實務經驗、溝通合作能力與團隊達成共同目標，並有機會爭取團隊領導或管理經驗。
+                        <p class="text-muted mb-0 line-height-35 section-text">與團隊達成共同目標<br>並爭取團隊領導或管理經驗
 </p>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                         <h2 class="mb-3">國際觀Get
                         </h2>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">開拓成員國際視野與提升議題敏感度，參與<br>跨國專案或國際領導力培訓會議提升國際觀。
+                        <p class="text-muted mb-0 line-height-35 section-text">參與跨文化交流機會、開拓國際視野<br>提升議題敏感度
                         </p>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
                         <h2 class="mb-3">人生方向Get
                         </h2>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">執行專案與實踐理想的過程磨練思維邏輯與<br>價值觀，在過程中培養相關專業能力。
+                        <p class="text-muted mb-0 line-height-35 section-text">磨練思維與價值觀、探索個人熱情<br>瞭解自我價值
 
                         </p>
                     </div>
